[gd_scene load_steps=4 format=3 uid="uid://bkoc65swrm74m"]

[ext_resource type="Script" path="res://Inventory/scripts/inventory_ui_slot.gd" id="1_u212v"]
[ext_resource type="Texture2D" uid="uid://dqy43lsd3u5ac" path="res://Art/inventory_art/inventory-slot.png" id="1_ucrib"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_08ex8"]
size = Vector2(16, 16)

[node name="Inventory_UI_Slot" type="Panel"]
self_modulate = Color(1, 1, 1, 0)
custom_minimum_size = Vector2(16, 16)
offset_right = 16.0
offset_bottom = 16.0
mouse_filter = 2
script = ExtResource("1_u212v")

[node name="Sprite2D" type="Sprite2D" parent="."]
texture = ExtResource("1_ucrib")
centered = false

[node name="CenterContainer" type="CenterContainer" parent="."]
custom_minimum_size = Vector2(16, 16)
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -8.0
offset_top = -8.0
offset_right = 8.0
offset_bottom = 8.0
grow_horizontal = 2
grow_vertical = 2

[node name="Panel" type="Panel" parent="CenterContainer"]
layout_mode = 2
mouse_filter = 2

[node name="item_display" type="Sprite2D" parent="CenterContainer/Panel"]

[node name="Label" type="Label" parent="CenterContainer/Panel"]
custom_minimum_size = Vector2(20, 0)
layout_mode = 0
offset_left = -2.0
offset_top = -2.0
offset_right = 18.0
offset_bottom = 21.0
scale = Vector2(0.5, 0.5)
text = "99"
horizontal_alignment = 2

[node name="mouse_detection_zone" type="Area2D" parent="CenterContainer"]

[node name="CollisionShape2D" type="CollisionShape2D" parent="CenterContainer/mouse_detection_zone"]
position = Vector2(8, 8)
shape = SubResource("RectangleShape2D_08ex8")

[node name="CanvasLayer" type="CanvasLayer" parent="."]

[node name="Label" type="Label" parent="CanvasLayer"]
offset_left = 778.0
offset_top = 99.0
offset_right = 867.0
offset_bottom = 150.0

[connection signal="mouse_entered" from="CenterContainer/mouse_detection_zone" to="." method="_on_mouse_detection_zone_mouse_entered"]
[connection signal="mouse_exited" from="CenterContainer/mouse_detection_zone" to="." method="_on_mouse_detection_zone_mouse_exited"]
[connection signal="mouse_shape_entered" from="CenterContainer/mouse_detection_zone" to="." method="_on_mouse_detection_zone_mouse_shape_entered"]
